// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ilib-scriptinfo simple package loading CommonJS module loading works 1`] = `
"Lifecycle scripts:
  start
    node index.js

Commands of the root workspace project (to run them, use "pnpm -w run"):
  build
    turbo build
  postinstall
    cp git-hooks/* .git/hooks/
  ci:coverage:unit:affected
    turbo coverage --concurrency=5 --affected
  ci:test:unit:all
    turbo test --concurrency=5
  ci:test:unit:affected
    turbo test --concurrency=5 --affected
  ci:test:web:all
    turbo test:web --concurrency=5
  ci:test:web:affected
    turbo test:web --concurrency=5 --affected
  ci:test:e2e:all
    turbo test:e2e --concurrency=5
  ci:test:e2e:affected
    turbo test:e2e --concurrency=5 --affected
  ci:release
    pnpm build && pnpm changeset publish
  coverage
    pnpm coverage:unit:affected
  coverage:unit:affected
    turbo coverage --affected
  coverage:unit:all
    turbo coverage
  test
    pnpm test:unit:affected
  test:unit
    pnpm test:unit:affected
  test:unit:all
    turbo test
  test:unit:affected
    turbo test --affected --output-logs=new-only
  test:unit:force
    turbo test --force
  test:web
    pnpm test:web:affected
  test:web:all
    turbo test:web
  test:web:affected
    turbo test:web --affected --output-logs=new-only
  test:web:force
    turbo test:web --force
  test:e2e
    pnpm test:e2e:affected
  test:e2e:all
    turbo test:e2e
  test:e2e:affected
    turbo test:e2e --affected --output-logs=new-only
  test:e2e:force
    turbo test:e2e --force
  doc
    pnpm -F '[origin/main]' doc
  run:loctool
    NODE_PATH=packages node --inspect packages/loctool/loctool.js
  run:lint
    NODE_PATH=packages node --inspect packages/ilib-lint/src/index.js
  run:samples
    pnpm -F '{packages/*/samples/*}' run:sample
  run:samples:affected
    pnpm -F '{packages/*/samples/*}[origin/main]' run:sample
"
`;

exports[`ilib-scriptinfo simple package loading ESM module loading works 1`] = `
"Lifecycle scripts:
  start
    node index.js

Commands of the root workspace project (to run them, use "pnpm -w run"):
  build
    turbo build
  postinstall
    cp git-hooks/* .git/hooks/
  ci:coverage:unit:affected
    turbo coverage --concurrency=5 --affected
  ci:test:unit:all
    turbo test --concurrency=5
  ci:test:unit:affected
    turbo test --concurrency=5 --affected
  ci:test:web:all
    turbo test:web --concurrency=5
  ci:test:web:affected
    turbo test:web --concurrency=5 --affected
  ci:test:e2e:all
    turbo test:e2e --concurrency=5
  ci:test:e2e:affected
    turbo test:e2e --concurrency=5 --affected
  ci:release
    pnpm build && pnpm changeset publish
  coverage
    pnpm coverage:unit:affected
  coverage:unit:affected
    turbo coverage --affected
  coverage:unit:all
    turbo coverage
  test
    pnpm test:unit:affected
  test:unit
    pnpm test:unit:affected
  test:unit:all
    turbo test
  test:unit:affected
    turbo test --affected --output-logs=new-only
  test:unit:force
    turbo test --force
  test:web
    pnpm test:web:affected
  test:web:all
    turbo test:web
  test:web:affected
    turbo test:web --affected --output-logs=new-only
  test:web:force
    turbo test:web --force
  test:e2e
    pnpm test:e2e:affected
  test:e2e:all
    turbo test:e2e
  test:e2e:affected
    turbo test:e2e --affected --output-logs=new-only
  test:e2e:force
    turbo test:e2e --force
  doc
    pnpm -F '[origin/main]' doc
  run:loctool
    NODE_PATH=packages node --inspect packages/loctool/loctool.js
  run:lint
    NODE_PATH=packages node --inspect packages/ilib-lint/src/index.js
  run:samples
    pnpm -F '{packages/*/samples/*}' run:sample
  run:samples:affected
    pnpm -F '{packages/*/samples/*}[origin/main]' run:sample
"
`;

exports[`ilib-scriptinfo simple package loading TypeScript module loading works 1`] = `
"Lifecycle scripts:
  start
    tsx index.ts

Commands of the root workspace project (to run them, use "pnpm -w run"):
  build
    turbo build
  postinstall
    cp git-hooks/* .git/hooks/
  ci:coverage:unit:affected
    turbo coverage --concurrency=5 --affected
  ci:test:unit:all
    turbo test --concurrency=5
  ci:test:unit:affected
    turbo test --concurrency=5 --affected
  ci:test:web:all
    turbo test:web --concurrency=5
  ci:test:web:affected
    turbo test:web --concurrency=5 --affected
  ci:test:e2e:all
    turbo test:e2e --concurrency=5
  ci:test:e2e:affected
    turbo test:e2e --concurrency=5 --affected
  ci:release
    pnpm build && pnpm changeset publish
  coverage
    pnpm coverage:unit:affected
  coverage:unit:affected
    turbo coverage --affected
  coverage:unit:all
    turbo coverage
  test
    pnpm test:unit:affected
  test:unit
    pnpm test:unit:affected
  test:unit:all
    turbo test
  test:unit:affected
    turbo test --affected --output-logs=new-only
  test:unit:force
    turbo test --force
  test:web
    pnpm test:web:affected
  test:web:all
    turbo test:web
  test:web:affected
    turbo test:web --affected --output-logs=new-only
  test:web:force
    turbo test:web --force
  test:e2e
    pnpm test:e2e:affected
  test:e2e:all
    turbo test:e2e
  test:e2e:affected
    turbo test:e2e --affected --output-logs=new-only
  test:e2e:force
    turbo test:e2e --force
  doc
    pnpm -F '[origin/main]' doc
  run:loctool
    NODE_PATH=packages node --inspect packages/loctool/loctool.js
  run:lint
    NODE_PATH=packages node --inspect packages/ilib-lint/src/index.js
  run:samples
    pnpm -F '{packages/*/samples/*}' run:sample
  run:samples:affected
    pnpm -F '{packages/*/samples/*}[origin/main]' run:sample
"
`;
